--- a/src/offline/lambda/buildspec.yaml
+++ b/src/offline/lambda/buildspec.yaml
@@ -3,10 +3,12 @@ version: 0.2
 env:
   variables:
     APP_NAME: "lambda"
+    Stage: "dev"
+    METHOD: "ps-complete"
   secrets-manager:
-    GITHUB_USER: gcr-rs-dev-workshop-github:githubUser
-    ACCESS_TOKEN: gcr-rs-dev-workshop-github:accessToken
-    APP_CONF_REPO: gcr-rs-dev-workshop-github:appConfRepo
+    GITHUB_USER: github-rs:githubUser
+    ACCESS_TOKEN: github-rs:accessToken
+    APP_CONF_REPO: github-rs:appConfRepo
 
 phases:
     install:
@@ -25,7 +27,7 @@ phases:
           - echo Build started on `date`
           - pwd
           - cd $CODEBUILD_SRC_DIR/src/offline/lambda/
-          - ./build.sh ${Stage}
+          - ./build.sh ${Stage} ${METHOD}
 
     post_build:
         commands:
